--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webp-converter": "^2.2.3"
   },
   "dependencies": {
-    "gulp-imagemin": "^7.1.0"
+    "gulp-imagemin": "^7.1.0",
+    "smoothscroll-polyfill": "^0.4.4"
   }
 }
